<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="alexa_settings_label" tools:ignore="MissingTranslation">Alexa</string>
    <string name="setting_voice_assistance_nonalexa" tools:ignore="MissingTranslation">[Acme Brandon] settings</string>
    <string name="setting_voice_assistance_alexa" tools:ignore="MissingTranslation">Amazon Alexa settings</string>
    <string name="setting_voice_assistance_enable_nonalexa" tools:ignore="MissingTranslation">Enable [Acme Brandon]</string>
    <string name="setting_voice_assistance_enable_alexa" tools:ignore="MissingTranslation">Enable Amazon Alexa</string>
    <string name="setting_voice_assistance_wake_word" tools:ignore="MissingTranslation">Wake words</string>
    <string name="setting_voice_assistance_wake_word_summary" tools:ignore="MissingTranslation">Get assistance by simply saying \"[Brandon]\" or \"Alexa\"</string>
    <string name="setting_voice_assistance_sounds_request_start_summary" tools:ignore="MissingTranslation">[Brandon] and Alexa play a sound when they start listening</string>
    <string name="setting_voice_assistance_sounds_request_end_summary" tools:ignore="MissingTranslation">[Brandon] and Alexa play a sound when they stop listening</string>
    <string name="setting_voice_assistance_language" tools:ignore="MissingTranslation">Language</string>
    <string name="setting_voice_assistance_setting_push_to_talk" tools:ignore="MissingTranslation">Push-to-talk</string>
    <string name="setting_voice_assistance_setting_push_to_talk_alexa" tools:ignore="MissingTranslation">Amazon Alexa</string>
    <string name="setting_voice_assistance_setting_push_to_talk_non_alexa" tools:ignore="MissingTranslation">[Acme Brandon]</string>
    <string name="setting_voice_assistance_setting_location_consent_summary" tools:ignore="MissingTranslation">Share your vehicle\'s current location with [Brandon] and Alexa to get smarter responses for nearby restaurants, local weather and more.</string>
    <string name="setting_alexa_signin" tools:ignore="MissingTranslation">Sign in</string>
    <string name="setting_alexa_hands_free_title" tools:ignore="MissingTranslation">Alexa Hands-Free</string>
    <string name="setting_alexa_sounds_request_start_title" tools:ignore="MissingTranslation">Start of request sound</string>
    <string name="setting_alexa_sounds_request_start_summary" tools:ignore="MissingTranslation">Play a sound when Alexa starts listening</string>
    <string name="setting_alexa_sounds_request_end_title" tools:ignore="MissingTranslation">End of request sound</string>
    <string name="setting_alexa_sounds_request_end_summary" tools:ignore="MissingTranslation">Play a sound when Alexa stops listening</string>
    <string name="setting_alexa_hands_free_summary" tools:ignore="MissingTranslation">Alexa responds any time you say \"Alexa\"</string>
    <string name="setting_location_sharing_title" tools:ignore="MissingTranslation">Location sharing</string>
    <string name="setting_location_sharing_summary" tools:ignore="MissingTranslation">Share your vehicle\'s current location with Alexa to get smarter responses for nearby restaurants, local weather and more.</string>
    <string name="setting_navigation_favorites_title">Sync navigation favorites</string>
    <string name="setting_navigation_favorites_summary">Alexa can help you navigate to the favorite locations stored in your vehicle. Favorites will be uploaded to the Amazon service.</string>
    <string name="setting_alexa_dnd_title" tools:ignore="MissingTranslation">Do Not Disturb</string>
    <string name="setting_alexa_dnd_summary" tools:ignore="MissingTranslation">Alexa won’t disturb you except for timers and alarms</string>
    <string name="setting_alexa_communication" tools:ignore="MissingTranslation">Communication</string>
    <string name="setting_alexa_sounds" tools:ignore="MissingTranslation">Sounds</string>
    <string name="setting_alexa_language_title" tools:ignore="MissingTranslation">Alexa\'s language</string>
    <string name="setting_alexa_signout" tools:ignore="MissingTranslation">Sign out</string>
    <string name="setting_alexa_things_to_try" tools:ignore="MissingTranslation">Things to try</string>
    <string name="setting_alexa_disable" tools:ignore="MissingTranslation">Disable Alexa</string>
    <string name="setting_alexa_language_mismatch" tools:ignore="MissingTranslation">Alexa isn\'t supported in</string>
    <string name="setting_alexa_current_language" tools:ignore="MissingTranslation">You can still talk to Alexa in %1$s, or select a different language for Alexa.</string>
    <string name="setting_language_mismatch_title" tools:ignore="MissingTranslation">Language Mismatch</string>
    <string name="setting_language_mismatch_content_1" tools:ignore="MissingTranslation">The system language is set to %1$s.&#160;</string>
    <string name="setting_language_mismatch_content_2" tools:ignore="MissingTranslation">Would you like to continue using Alexa in %1$s?</string>
    <string name="setting_alexa" tools:ignore="MissingTranslation">ALEXA SETTINGS</string>
    <string name="setting_continue" tools:ignore="MissingTranslation">CONTINUE</string>
    <string name="setting_aacs" tools:ignore="MissingTranslation">Alexa Auto Client Service</string>
    <string name="settings_alexa" tools:ignore="MissingTranslation">Settings</string>
    <string name="logout" tools:ignore="MissingTranslation">Sign out?</string>
    <string name="disable_alexa" tools:ignore="MissingTranslation">Disable Alexa?</string>
    <string name="logout_confirm" tools:ignore="MissingTranslation">Do you want to sign out of Amazon Alexa?</string>
    <string name="confirm_yesno_yes" tools:ignore="MissingTranslation">SIGN OUT</string>
    <string name="confirm_yesno_no" tools:ignore="MissingTranslation">CANCEL</string>
    <string name="confirm_yesno_confirm" tools:ignore="MissingTranslation">YES</string>
    <string name="confirm_yesno_disable" tools:ignore="MissingTranslation">DISABLE</string>
    <string name="disable_alexa_confirm" tools:ignore="MissingTranslation">Alexa will no longer be available in this vehicle.</string>
    <string name="preference_aacs_override_base_config_title" tools:ignore="MissingTranslation">Override Base Configuration</string>
    <string name="preference_aacs_override_base_config_summary" tools:ignore="MissingTranslation">All configurations below will be applied if this is selected</string>
    <string name="preference_category_alexa_device" tools:ignore="MissingTranslation">Alexa Device</string>
    <string name="preference_avsdevice_clientid" tools:ignore="MissingTranslation">Client Id</string>
    <string name="preference_avsdevice_productid" tools:ignore="MissingTranslation">Product Id</string>
    <string name="preference_avsdevice_dsn" tools:ignore="MissingTranslation">Device Serial Number</string>
    <string name="preference_avsdevice_manufacturer" tools:ignore="MissingTranslation">Manufacturer</string>
    <string name="preference_category_aacs_service" tools:ignore="MissingTranslation">AACS General</string>
    <string name="preference_aacs_startonboot" tools:ignore="MissingTranslation">Start AACS on Device Bootup</string>
    <string name="preference_category_aacs_defaults" tools:ignore="MissingTranslation">AACS Defaults</string>
    <string name="preference_aacs_use_aacs_audio_input" tools:ignore="MissingTranslation">Use AACS Audio Input</string>
    <string name="preference_category_aacs_control" tools:ignore="MissingTranslation">Control AACS</string>
    <string name="preference_aacs_reboot_now" tools:ignore="MissingTranslation">REBOOT AACS &amp; APPLY CONFIGURATION</string>
    <string name="preference_aacs_shutdown" tools:ignore="MissingTranslation">SHUTDOWN AACS</string>
    <string name="preference_aacs_start" tools:ignore="MissingTranslation">START AACS</string>
    <string name="ttt_preview_mode_note">Note: Some features require signing in with Amazon Alexa.</string>
    <string name="ttt_getting_started" translatable="false">Getting Started</string>
    <string name="ttt_alexa_s_talents" translatable="false">Alexa\'s Talents</string>
    <string name="ttt_entertainment" translatable="false">Entertainment</string>
    <string name="ttt_communication" translatable="false">Communication</string>
    <string name="ttt_weather" translatable="false">Weather</string>
    <string name="ttt_smart_home" translatable="false">Smart Home</string>
    <string name="ttt_news_and_information" translatable="false">News and Information</string>
    <string name="ttt_navigation" translatable="false">Navigation</string>
    <string name="ttt_traffic_information" translatable="false">Traffic Information</string>
    <string name="ttt_skills" translatable="false">Skills</string>
    <string name="ttt_lists" translatable="false">Lists</string>
    <string name="ttt_shopping" translatable="false">Shopping</string>
    <string name="ttt_questions_and_answers" translatable="false">Questions and Answers</string>
    <string name="ttt_sports" translatable="false">Sports</string>
    <string name="ttt_calendar" translatable="false">Calendar</string>
    <string name="ttt_getting_started_text1" translatable="false">\"Alexa, find a nearby gas station.\"</string>
    <string name="ttt_getting_started_text2" translatable="false">\"Alexa, play music.\"</string>
    <string name="ttt_getting_started_text3" translatable="false">\"Alexa, what\'s the weather?\"</string>
    <string name="ttt_getting_started_text4" translatable="false">\"Alexa, how\'s my commute?\"</string>
    <string name="ttt_getting_started_text5" translatable="false">\"Alexa, what\'s my Flash Briefing?\"</string>
    <string name="ttt_alexa_s_talents_text1" translatable="false">\"Alexa, good morning.\"</string>
    <string name="ttt_alexa_s_talents_text2" translatable="false">\"Alexa, tell me a story.\"</string>
    <string name="ttt_alexa_s_talents_text3" translatable="false">\"Alexa, what can you remember?\"</string>
    <string name="ttt_entertainment_text1" translatable="false">\"Alexa, play music.\"</string>
    <string name="ttt_entertainment_text2" translatable="false">\"Alexa, play rock music from the 70s.\"</string>
    <string name="ttt_entertainment_text3" translatable="false">\"Alexa, play the latest Bruno Mars album.\"</string>
    <string name="ttt_entertainment_text4" translatable="false">\"Alexa, resume my Audible book.\"</string>
    <string name="ttt_communication_text1" translatable="false">\"Alexa, send a message to John.\"</string>
    <string name="ttt_communication_text2" translatable="false">\"Alexa, how do I send a message?\"</string>
    <string name="ttt_communication_text3" translatable="false">\"Alexa, call Erin\'s cell phone.\"</string>
    <string name="ttt_communication_text4" translatable="false">\"Alexa, call 844-582-5393.\"</string>
    <string name="ttt_weather_text1" translatable="false">\"Alexa, how\'s the weather?\"</string>
    <string name="ttt_weather_text2" translatable="false">\"Alexa, will it rain today?\"</string>
    <string name="ttt_weather_text3" translatable="false">\"Alexa, what\'s the weather in Honolulu?\"</string>
    <string name="ttt_smart_home_text1" translatable="false">\"Alexa, turn on the porch lights.\"</string>
    <string name="ttt_smart_home_text2" translatable="false">\"Alexa, lock the front door.\"</string>
    <string name="ttt_smart_home_text3" translatable="false">\"Alexa, set my house to 70 degrees.\"</string>
    <string name="ttt_smart_home_text4" translatable="false">\"Alexa, close the garage door.\"</string>
    <string name="ttt_news_and_information_text1" translatable="false">\"Alexa, what\'s the news?\"</string>
    <string name="ttt_news_and_information_text2" translatable="false">\"Alexa, what\'s my sports update?\"</string>
    <string name="ttt_news_and_information_text3" translatable="false">\"Alexa, play NPR.\"</string>
</resources>