<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">

    <SwitchPreferenceCompat
        app:key="alexa-sound-start"
        app:title="@string/setting_alexa_sounds_request_start_title"
        app:summary="@string/setting_alexa_sounds_request_start_summary"
        app:defaultValue="true"
        app:layout="@layout/alexa_preference_layout" />

    <SwitchPreferenceCompat
        app:key="alexa-sound-end"
        app:title="@string/setting_alexa_sounds_request_end_title"
        app:summary="@string/setting_alexa_sounds_request_end_summary"
        app:defaultValue="true"
        app:layout="@layout/alexa_preference_layout" />

</androidx.preference.PreferenceScreen>