<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation"
    app:startDestination="@id/navigation_fragment_alexa_settings_home">

    <fragment
        android:id="@+id/navigation_fragment_alexa_settings_home"
        android:name="com.amazon.alexa.auto.settings.home.AlexaSettingsHomeFragment"
        android:label="@string/alexa_settings_label">
    </fragment>

    <fragment
        android:id="@+id/navigation_fragment_alexa_settings_languages"
        android:name="com.amazon.alexa.auto.settings.AlexaSettingsLanguagesFragment"
        android:label="@string/setting_alexa_language_title">
    </fragment>

    <fragment
        android:id="@+id/navigation_fragment_alexa_settings_things_to_try"
        android:name="com.amazon.alexa.auto.settings.ThingsToTryFragment"
        android:label="@string/setting_alexa_things_to_try">
    </fragment>

    <fragment
        android:id="@+id/navigation_fragment_alexa_settings_things_to_try_details"
        android:name="com.amazon.alexa.auto.settings.ThingsToTryDetailsFragment"
        android:label="Title:{title}">
    <argument
        android:name="title"
        app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_fragment_alexa_settings_sounds"
        android:name="com.amazon.alexa.auto.settings.AlexaSoundPreferencesFragment"
        android:label="@string/setting_alexa_sounds">
    </fragment>

    <fragment
        android:id="@+id/navigation_fragment_aacs_preferences"
        android:name="com.amazon.alexa.auto.settings.AACSPreferenceFragment"
        android:label="AACS Preferences">
    </fragment>

    <fragment
        android:id="@+id/navigation_fragment_alexa_settings_communication"
        android:name="com.amazon.alexa.auto.comms.ui.fragment.settings.CommunicationFragment"
        android:label="@string/setting_alexa_communication">
    </fragment>

    <fragment
        android:id="@+id/navigation_fragment_communication_consent"
        android:name="com.amazon.alexa.auto.comms.ui.fragment.settings.CommunicationPreferenceFragment"
        android:label="@string/setting_alexa_communication"/>

    <fragment
        android:id="@+id/navigation_fragment_assistAppSelection"
        android:name="com.amazon.alexa.auto.settings.AssistAppSelectionFragment" />

    <action
        android:id="@+id/action_navigate_to_setup"
        app:destination="@id/setup_navigation" />

    <include app:graph="@navigation/setup_navigation" />
</navigation>